# filesequence

./: README.md  Setup.hs  TODO.md  filesequence.cabal  seqls.prof  stack.yaml
bench/: Benchmarks.hs
src/Applications/SeqTools/: CompileTimeInfos.hs  CompileTimeInfosTH.hs  Seqcp.hs  Seqls.hs  Seqsum.hs
src/System/: FileSequence.hs
src/System/FileSequence/: Format.hs  FrameList.hs  Hash.hs  Internal.hs  Manip.hs  Padding.hs  SparseFrameList.hs  Status.hs
src/System/FileSequence/FrameList/: IntervalTree.hs  TupleList.hs
src/System/FileSequence/Manip/: Posix.hs  Windows.hs
src/System/FileSequence/Status/: Posix.hs  Windows.hs
tests/: FileSequenceTests.hs  FrameListTests.hs  Main.hs  Samples.hs
