name:       filesequence
version:    0.1
build-type: Simple
cabal-version: >= 1.8
build-depends:     base >= 3 && < 5
library
  exposed-modules:  System.FileSequence,
                    System.FileSequence.Manip,
                    System.FileSequence.Status,
                    System.FileSequence.Format,
                    System.FileSequence.Hash,
                    System.FileSequence.SparseFrameList
  if os(windows)
    build-depends: win32
    exposed-modules: System.FileSequence.Manip.Windows,
                     System.FileSequence.Status.Windows
  else
    build-depends: unix
    exposed-modules: System.FileSequence.Manip.Posix,
                     System.FileSequence.Status.Posix

  build-depends: base, regex-pcre-builtin, filepath, directory, parallel, bytestring, cryptohash
  ghc-options:       -Wall -O2 -rtsopts 
  Hs-Source-Dirs: src/

executable seqls
  build-depends: base, regex-pcre-builtin, filepath, directory, filesequence
  ghc-options: -Wall -O2 -rtsopts 
  hs-source-dirs:  src/Applications/SeqTools/
  main-is:  Seqls.hs

executable seqsum
  build-depends: base, filesequence, cryptohash >= 0.9, directory
  ghc-options: -Wall -O2 -rtsopts 
  hs-source-dirs:  src/Applications/SeqTools/
  main-is:  Seqsum.hs

executable seqcp
  build-depends: base, filesequence, cryptohash >= 0.9, directory, filepath
  ghc-options: -Wall -O2 -rtsopts 
  hs-source-dirs:  src/Applications/SeqTools/
  main-is:  Seqcp.hs
