name:       filesequence
version:    0.1
build-type: Simple
cabal-version: >= 1.8
Build-Depends:     base >= 3 && < 5
Library
  Exposed-modules:  System.FileSequence,
                    System.FileSequence.Manip,
                    System.FileSequence.Status,
                    System.FileSequence.Format,
                    System.FileSequence.Hash,
                    System.FileSequence.SparseFrameList
  build-depends: base, regex-pcre, filepath, directory, parallel, unix, bytestring, cryptohash
  ghc-options:       -Wall -O2 -rtsopts 
  Hs-Source-Dirs: src/

executable seqls
  build-depends: base, regex-pcre, filepath, directory, filesequence
  ghc-options: -Wall -O2 -rtsopts 
  hs-source-dirs:  src/Applications/SeqTools/
  main-is:  Seqls.hs

executable seqsum
  build-depends: base, filesequence, cryptohash >= 0.9, directory
  ghc-options: -Wall -O2 -rtsopts 
  hs-source-dirs:  src/Applications/SeqTools/
  main-is:  Seqsum.hs

executable seqcp
  build-depends: base, filesequence, cryptohash >= 0.9, directory, filepath
  ghc-options: -Wall -O2 -rtsopts 
  hs-source-dirs:  src/Applications/SeqTools/
  main-is:  Seqcp.hs

test-suite FileSequenceTests
  hs-source-dirs:       tests
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0
  build-depends:        base >= 4 && < 5, HTF, filesequence
  ghc-options:          -Wall

