name:       filesequence
version:    0.1
build-type: Simple
cabal-version: >= 1.8
build-depends:     base >= 3 && < 5
Library
  exposed-modules:  System.FileSequence,
                    System.FileSequence.Manip,
                    System.FileSequence.Status,
                    System.FileSequence.Format,
                    System.FileSequence.Hash,
                    System.FileSequence.SparseFrameList
  build-depends: base, posix-paths, utf8-string, regex-pcre-builtin, filepath, directory, parallel, unix, bytestring, cryptohash
  ghc-options:      -Wall -O2 -rtsopts 
  hs-source-dirs: src/

executable seqls
  build-depends: base, utf8-string, regex-pcre, filepath, directory, filesequence
  ghc-options:  -Wall -O2 -rtsopts 
  hs-source-dirs:  src/Applications/SeqTools/
  main-is:  Seqls.hs

executable seqsum
  build-depends: base, utf8-string, filesequence, cryptohash >= 0.9, directory
  ghc-options: -Wall -O2 -rtsopts 
  hs-source-dirs:  src/Applications/SeqTools/
  main-is:  Seqsum.hs

--executable seqcp
--  build-depends: base, filesequence, cryptohash >= 0.9, directory, filepath
--  ghc-options: -Wall -O2 -rtsopts 
--  hs-source-dirs:  src/Applications/SeqTools/
--  main-is:  Seqcp.hs

test-suite FileSequenceTests
  build-depends:        base >= 4 && < 5, HTF, filesequence
  ghc-options:          -O2 -Wall
  hs-source-dirs:       tests
  main-is:              Main.hs
  type:                 exitcode-stdio-1.0

benchmark bench-builder-all
  build-depends:    base, deepseq, filesequence, random, criterion 
  hs-source-dirs:   bench
  main-is:          Benchmarks.hs
  type:             exitcode-stdio-1.0
